...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/one_target_main_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Target" />

        <TextView
            android:id="@+id/one_target_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/score_text_size"
            app:layout_constraintEnd_toEndOf="@+id/one_target_secondary_label"
            app:layout_constraintStart_toStartOf="@id/one_target_secondary_label"
            app:layout_constraintTop_toBottomOf="@id/one_target_secondary_label"
...

        <TextView
            android:id="@+id/one_target_main_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toTopOf="@+id/one_target_main"
            app:layout_constraintEnd_toEndOf="@+id/one_target_main"
            app:layout_constraintStart_toStartOf="@+id/one_target_main"
            tools:text="Current Score" />

        <TextView
            android:id="@+id/one_target_main"
...
