...

        <TextView
            android:id="@+id/ten_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toTopOf="@id/ten_button_one"
            app:layout_constraintEnd_toEndOf="@id/ten_button_one"
            app:layout_constraintStart_toStartOf="@id/ten_button_one"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1st Dart" />

        <TextView
            android:id="@+id/ten_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBottom_toTopOf="@id/ten_button_two"
            app:layout_constraintEnd_toEndOf="@id/ten_button_two"
            app:layout_constraintStart_toStartOf="@id/ten_button_two"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2nd Dart" />

        <TextView
...
